--- a/.github/workflows/java.yaml
+++ b/.github/workflows/java.yaml
@@ -13,7 +13,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout GitHub action'
+      - name: 'Checkout GitHub action.'
         uses: actions/checkout@v2
 
       - name: Setup Java Sdk ${{ env.JAVA_VERSION }}
